--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -24,7 +24,8 @@
                     <li>Rolltemplate text. On critical failure for parry, added additional notes. Suggested by Mike W.</li>
                     <li>Rolltemplate text. On critical failure for block, added additional notes. Suggested by Mike W.</li>
                     <li>Rolltemplate text. On critical success for any active defense, added additional notes. Suggested by Mike W.</li>
-                    <li>Bio\Misc. Tab. Added Training textarea below Background history & notes.</li>
+                    <li>Bio\Misc. Tab. Added Training textarea below Background history & notes. Suggested by Mike W.</li>
+                    <li>General Tab. Added toggle to show/hide encumbrance table. Suggestedd by Mike W.</li>
                 </ul>
 	            <label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
 	            <button type="action" name="act_view_updates_tab" class="reset" />View All Updates</button>
@@ -1460,8 +1461,15 @@
 
 		<div class="sheet-box sheet-encumberance">
 			<div class="sheet-table">
+				<input type="checkbox" name="attr_toggle_encumbrance" class="toggle toggle-encumbrance" />
 				<div class="sheet-header">
-					<div class="sheet-cell sheet-col0">Encumbrance</div>
+				    <div class="sheet-cell sheet-col0">
+				        <div class="colToggle">
+    				        <input type="checkbox" name="attr_toggle_encumbrance" class="toggle toggle-encumbrance" />
+    				        <span class="checkbox checkbox-encumbrance"></span>    
+    				    </div>
+				        Encumbrance
+				    </div>
 					<div class="sheet-cell sheet-colAll">Load</div>
 					<div class="sheet-cell sheet-colAll">Move</div>
 					<div class="sheet-cell sheet-colAll">ENH MOVE</div>
@@ -1469,156 +1477,158 @@
 					<div class="sheet-cell sheet-colAll">Water</div>
 					<div class="sheet-cell sheet-colAll">Dodge</div>
 				</div>
-				<div class="sheet-row sheet-row-encumberance-0">
-					<div class="sheet-cell sheet-col0 sheet-label">
-						None (0)
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_lift_0" value="@{basic_lift}" disabled="disabled" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_move_0" value="@{basic_move}" disabled="disabled" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_enhanced_move_0" value="" readonly="readonly" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_air_0" value="0" readonly="readonly" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_water_0" value="0" readonly="readonly" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_dodge_0" value="@{dodge}" disabled="disabled" />
-					</div>
-				</div> <!-- .sheet-row -->
-				<div class="sheet-row sheet-row-encumberance-1">
-					<div class="sheet-cell sheet-col0 sheet-label">
-						Light (1)
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_lift_1" value="2 * @{basic_lift}" disabled="disabled" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_move_1" value="[[((1 + floor((@{basic_move} * 0.8))) + abs(1 - floor((@{basic_move} * 0.8)))) / 2]]" disabled="disabled" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_enhanced_move_1" value="" readonly="readonly" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_air_1" value="0" readonly="readonly" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_water_1" value="0" readonly="readonly" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_dodge_1" value="[[((1 + (@{dodge} - 1)) + abs(1 - (@{dodge} - 1))) / 2]]" disabled="disabled" />
-					</div>
-				</div> <!-- .sheet-row -->
-				<div class="sheet-row sheet-row-encumberance-2">
-					<div class="sheet-cell sheet-col0 sheet-label">
-						Medium (2)
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_lift_2" value="floor(3 * @{basic_lift}*100)/100" disabled="disabled" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_move_2" value="[[((1 + floor((@{basic_move} * 0.6))) + abs(1 - floor((@{basic_move} * 0.6)))) / 2]]"  disabled="disabled" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_enhanced_move_2" value="" readonly="readonly" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_air_2" value="0" readonly="readonly" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_water_2" value="0" readonly="readonly" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_dodge_2" value="[[((1 + (@{dodge} - 2)) + abs(1 - (@{dodge} -2))) / 2]]" disabled="disabled" />
-					</div>
-				</div> <!-- .sheet-row -->
-				<div class="sheet-row sheet-row-encumberance-3">
-					<div class="sheet-cell sheet-col0 sheet-label">
-						Heavy (3)
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_lift_3" value="floor(6 * @{basic_lift}*100)/100" disabled="disabled" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_move_3" value="[[((1 + floor((@{basic_move} * 0.4))) + abs(1 - floor((@{basic_move} * 0.4)))) / 2]]"  disabled="disabled" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_enhanced_move_3" value="" readonly="readonly" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_air_3" value="0" readonly="readonly" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_water_3" value="0" readonly="readonly" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_dodge_3" value="[[((1 + (@{dodge} - 3)) + abs(1 - (@{dodge} -3))) / 2]]" disabled="disabled" />
-					</div>
-				</div> <!-- .sheet-row -->
-				<div class="sheet-row sheet-row-encumberance-4">
-					<div class="sheet-cell sheet-col0 sheet-label">
-						X-Heavy (4)
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_lift_4" value="10 * @{basic_lift}"  disabled="disabled" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_move_4" value="[[((1 + floor((@{basic_move} * 0.2))) + abs(1 - floor((@{basic_move} * 0.2)))) / 2]]"  disabled="disabled" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_enhanced_move_4" value="" readonly="readonly" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_air_4" value="0" readonly="readonly" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_water_4" value="0" readonly="readonly" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_dodge_4" value="[[((1 + (@{dodge} -4)) + abs(1 - (@{dodge} - 4))) / 2]]" disabled="disabled" />
-					</div>
-				</div> <!-- .sheet-row -->
-				<!-- Yes I realize encumbrance is spelled wrong here but the original authors misspelled it throughout the file so I did the same to stay backwards compatible. -->	
-				<div class="sheet-row margin-bottom sheet-row-encumberance-MAX">
-					<div class="sheet-cell sheet-col0 sheet-label">
-						<div class="sheet-popup">MAX Load*</div>
-						<span class="sheet-tooltip">
-							Carry on Back (B353) 15xBL. Thus, you can carry
-							<br />
-							more than you can lift by yourself . . . but 
-							<br />
-							every second that your encumbrance is over 10xBL
-							<br />
-							(that is Extra-Heavy encumbrance), you lose 1 FP.
-							<br />						
-						</span>
-					</div>
-
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_lift_5" value="15 * @{basic_lift}"  disabled="disabled" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_move_5" value="[[((1 + floor((@{basic_move} * 0.2))) + abs(1 - floor((@{basic_move} * 0.2)))) / 2]]"  disabled="disabled" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_enhanced_move_5" value="" readonly="readonly" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_air_5" value="0" readonly="readonly" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_water_5" value="0" readonly="readonly" />
-					</div>
-					<div class="sheet-cell sheet-colAll">
-						<input type="text" name="attr_dodge_5" value="[[((1 + (@{dodge} -4)) + abs(1 - (@{dodge} - 4))) / 2]]"disabled="disabled" />
-					</div>
-				</div> <!-- .sheet-row -->
+				<div class="encumbrance-table-body">
+    				<div class="sheet-row sheet-row-encumberance-0">
+    					<div class="sheet-cell sheet-col0 sheet-label">
+    						None (0)
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_lift_0" value="@{basic_lift}" disabled="disabled" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_move_0" value="@{basic_move}" disabled="disabled" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_enhanced_move_0" value="" readonly="readonly" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_air_0" value="0" readonly="readonly" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_water_0" value="0" readonly="readonly" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_dodge_0" value="@{dodge}" disabled="disabled" />
+    					</div>
+    				</div> <!-- .sheet-row -->
+    				<div class="sheet-row sheet-row-encumberance-1">
+    					<div class="sheet-cell sheet-col0 sheet-label">
+    						Light (1)
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_lift_1" value="2 * @{basic_lift}" disabled="disabled" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_move_1" value="[[((1 + floor((@{basic_move} * 0.8))) + abs(1 - floor((@{basic_move} * 0.8)))) / 2]]" disabled="disabled" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_enhanced_move_1" value="" readonly="readonly" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_air_1" value="0" readonly="readonly" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_water_1" value="0" readonly="readonly" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_dodge_1" value="[[((1 + (@{dodge} - 1)) + abs(1 - (@{dodge} - 1))) / 2]]" disabled="disabled" />
+    					</div>
+    				</div> <!-- .sheet-row -->
+    				<div class="sheet-row sheet-row-encumberance-2">
+    					<div class="sheet-cell sheet-col0 sheet-label">
+    						Medium (2)
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_lift_2" value="floor(3 * @{basic_lift}*100)/100" disabled="disabled" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_move_2" value="[[((1 + floor((@{basic_move} * 0.6))) + abs(1 - floor((@{basic_move} * 0.6)))) / 2]]"  disabled="disabled" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_enhanced_move_2" value="" readonly="readonly" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_air_2" value="0" readonly="readonly" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_water_2" value="0" readonly="readonly" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_dodge_2" value="[[((1 + (@{dodge} - 2)) + abs(1 - (@{dodge} -2))) / 2]]" disabled="disabled" />
+    					</div>
+    				</div> <!-- .sheet-row -->
+    				<div class="sheet-row sheet-row-encumberance-3">
+    					<div class="sheet-cell sheet-col0 sheet-label">
+    						Heavy (3)
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_lift_3" value="floor(6 * @{basic_lift}*100)/100" disabled="disabled" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_move_3" value="[[((1 + floor((@{basic_move} * 0.4))) + abs(1 - floor((@{basic_move} * 0.4)))) / 2]]"  disabled="disabled" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_enhanced_move_3" value="" readonly="readonly" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_air_3" value="0" readonly="readonly" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_water_3" value="0" readonly="readonly" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_dodge_3" value="[[((1 + (@{dodge} - 3)) + abs(1 - (@{dodge} -3))) / 2]]" disabled="disabled" />
+    					</div>
+    				</div> <!-- .sheet-row -->
+    				<div class="sheet-row sheet-row-encumberance-4">
+    					<div class="sheet-cell sheet-col0 sheet-label">
+    						X-Heavy (4)
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_lift_4" value="10 * @{basic_lift}"  disabled="disabled" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_move_4" value="[[((1 + floor((@{basic_move} * 0.2))) + abs(1 - floor((@{basic_move} * 0.2)))) / 2]]"  disabled="disabled" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_enhanced_move_4" value="" readonly="readonly" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_air_4" value="0" readonly="readonly" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_water_4" value="0" readonly="readonly" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_dodge_4" value="[[((1 + (@{dodge} -4)) + abs(1 - (@{dodge} - 4))) / 2]]" disabled="disabled" />
+    					</div>
+    				</div> <!-- .sheet-row -->
+    				<!-- Yes I realize encumbrance is spelled wrong here but the original authors misspelled it throughout the file so I did the same to stay backwards compatible. -->	
+    				<div class="sheet-row margin-bottom sheet-row-encumberance-MAX">
+    					<div class="sheet-cell sheet-col0 sheet-label">
+    						<div class="sheet-popup">MAX Load*</div>
+    						<span class="sheet-tooltip">
+    							Carry on Back (B353) 15xBL. Thus, you can carry
+    							<br />
+    							more than you can lift by yourself . . . but 
+    							<br />
+    							every second that your encumbrance is over 10xBL
+    							<br />
+    							(that is Extra-Heavy encumbrance), you lose 1 FP.
+    							<br />						
+    						</span>
+    					</div>
+    
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_lift_5" value="15 * @{basic_lift}"  disabled="disabled" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_move_5" value="[[((1 + floor((@{basic_move} * 0.2))) + abs(1 - floor((@{basic_move} * 0.2)))) / 2]]"  disabled="disabled" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_enhanced_move_5" value="" readonly="readonly" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_air_5" value="0" readonly="readonly" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_water_5" value="0" readonly="readonly" />
+    					</div>
+    					<div class="sheet-cell sheet-colAll">
+    						<input type="text" name="attr_dodge_5" value="[[((1 + (@{dodge} -4)) + abs(1 - (@{dodge} - 4))) / 2]]"disabled="disabled" />
+    					</div>
+    				</div> <!-- .sheet-row -->
+				</div>
 				<div class="sheet-row sheet-row-load sheet-hr">
 					<div class="sheet-cell sheet-col0 sheet-label">
 						Current (<span name="attr_encumbrance_level" value=""></span>)
@@ -3650,6 +3660,7 @@
 	    <li>Rolltemplate text. On critical success for any active defense, added additional notes. Suggested by Mike W.</li>
 	    <li>Dev Notes: repeating_defense; added hidden attr_defense_type, values 1 to 5. Needed to determine notes for criticals on active defenses.</li>
 	    <li>Bio\Misc. Tab. Added Training textarea below Background history & notes.</li>
+	    <li>General Tab. Added toggle to show/hide encumbrance table. Suggestedd by Mike W.</li>
 	</ul>
 	
 	<h4>Version 1.6.0</h4>
