--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -4707,7 +4707,7 @@ Skull Damage x4
 		});
 
 		sumRepeating('repeating_item', 'weighttotal', function (v) {
-			setAttrs({ total_weight: (v * 1000) / 1000 }, {silent: false}, thenEncumbrance);
+			setAttrs({ total_weight: Math.round(v * 1000) / 1000 }, {silent: false}, thenEncumbrance);
 		});
 
 		// Update attributes, then secondary characteristics, and so on...
