--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -25,7 +25,7 @@
                     <li>Rolltemplate text. On critical failure for block, added additional notes. Suggested by Mike W.</li>
                     <li>Rolltemplate text. On critical success for any active defense, added additional notes. Suggested by Mike W.</li>
                     <li>Bio\Misc. Tab. Added Training textarea below Background history & notes. Suggested by Mike W.</li>
-                    <li>General Tab. Added toggle to show/hide encumbrance table. Suggestedd by Mike W.</li>
+                    <li>General Tab. Added toggle to show/hide encumbrance table. Suggested by Mike W.</li>
                 </ul>
 	            <label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
 	            <button type="action" name="act_view_updates_tab" class="reset" />View All Updates</button>
