uc58:fix found bugs

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -16985,7 +16985,7 @@
                         <div class="subclass_holder holder"></div>
                     </div>
                     <div class="choice row custom_class custom_class_spells">
-                        <label><span data-i18n="spellcasting-ability">Spellcasting Ability</span>:
+                        <label><span data-i18n="spellcasting-ability">Spellcasting Ability:</span>
                             <select name="comp_custom_class_spell_ability">
                                 <option value="" data-i18n="choose">Choose</option>
                                 <option value="Strength" data-i18n="strength">Strength</option>
@@ -16996,13 +16996,13 @@
                                 <option value="Charisma" data-i18n="charisma">Charisma</option>
                             </select>
                         </label>
-                        <label class="hilite choice custom_spellcasting"><span data-i18n="number-of-cantrips">Number of Cantrips</span>:
+                        <label class="hilite choice custom_spellcasting"><span data-i18n="number-of-cantrips">Number of Cantrips:</span>
                             <input type="number" name="comp_custom_class_cantrip_number" min="0" value="1" required>
                         </label>
-                        <label class="hilite choice custom_spellcasting"><span data-i18n="number-of-lvl-1-spells">Number of Level 1 Spells</span>:
+                        <label class="hilite choice custom_spellcasting"><span data-i18n="number-of-lvl-1-spells">Number of Level 1 Spells:</span>
                             <input type="number" name="comp_custom_class_spell_number" min="0" value="1" required>
                         </label>
-                        <label class="hilite choice custom_spellcasting"><span data-i18n="spell-list">Spell List</span>:
+                        <label class="hilite choice custom_spellcasting"><span data-i18n="spell-list">Spell List:</span>
                             <select name="comp_custom_class_spell_list" required>
                                 <option value="" data-i18n="choose">Choose</option>
                                 <option value="bard" data-i18n="bard">Bard</option>
@@ -17086,7 +17086,7 @@
         <input type="hidden" name="comp_roll_results" value="">
         <div class="choices">
             <div class="row">
-                <label class="hilite"><span data-i18n="ability-score-method">Ability Score Method</span>:
+                <label class="hilite"><span data-i18n="ability-score-method">Ability Score Method:</span>
                     <select name="comp_abilities" required>
                         <option value="" data-i18n="choose">Choose</option>
                         <option class="custom" value="custom" data-i18n="custom">Custom</option>
@@ -17206,14 +17206,14 @@
         <div class="topbar-holder"></div>
         <div class="choices">
             <div class="row">
-                <label class="hilite"><span data-i18n="choose-background">Choose a Background</span>:
+                <label class="hilite"><span data-i18n="choose-background">Choose a Background :</span>
                     <select name="comp_background" accept="Category:Backgrounds" required>
                         <option value="" data-i18n="choose">Choose</option>
                         <option class="custom" value="Rules:Backgrounds" data-i18n="custom">Custom</option>
                     </select>
                 </label>
                 <div class="choice custom_background">
-                    <label class="hilite"><span data-i18n="name-background">Name:</span>:
+                    <label class="hilite"><span data-i18n="name-background">Name:</span>
                         <input type="text" name="comp_background_name" placeholder="Artisan" required>
                     </label>
                 </div>
