fix burst damage
description changed to avoid confusion

--- a/NoReturn/NoReturn.html
+++ b/NoReturn/NoReturn.html
@@ -880,7 +880,7 @@
             <textarea name="attr_rangeattack_makro_b">/me schießt mit @{rangedweaponname} und trifft mit [[1d6! + ((@{ge} - 1) + @{rangedweaponclass} - @{malusGesamt} + ?{Streufeuer|nein, 0|ja, 2} + ?{Modifier?|0})d6]] Erfolgen auf die Trefferzone [[ 2d6 ]]</textarea>
             <textarea name="attr_rangeattack_makro_v">/me schießt mit @{rangedweaponname} und trifft mit [[1d6! + ((@{ge} - 1) + @{rangedweaponclass} - @{malusGesamt} + ?{Sperrfeuer|nein, @{rangedweapondamageMore}|ja, 0} + ?{Modifier?|0})d6]] Erfolgen auf die Trefferzone [[ 2d6 ]]</textarea>
             <textarea name="attr_rangedamage_makro_ers">/me und macht [[@{rangedweapondamage} + @{rangedweapondamageMore} * (?{Schussanzahl?|1}-1) + ?{Guter Treffer?|0}d6 + ?{Speizalmunition?|0}]] Schaden</textarea>
-            <textarea name="attr_rangedamage_makro_b">/me und macht [[@{rangedweapondamage} + @{rangedweapondamageMore} * (?{Schussanzahl?|1}-1) + ?{Konzentriertes Feuer|nein, 0|ja, 10} + ?{Guter Treffer?|0}d6 + ?{Speizalmunition?|0}]] Schaden</textarea>
+            <textarea name="attr_rangedamage_makro_b">/me und macht [[@{rangedweapondamage} + @{rangedweapondamageMore} * (?{Burstanzahl?|1}-1) + ?{Konzentriertes Feuer|nein, 0|ja, 10} + ?{Guter Treffer?|0}d6 + ?{Speizalmunition?|0}]] Schaden</textarea>
             <textarea name="attr_rangedamage_makro_a">/me und macht [[@{rangedweapondamage_a} + 10 + @{rangedweapondamageMore} * 2 + ?{Guter Treffer?|0}d6 + ?{Speizalmunition?|0}]] Schaden</textarea>
           </div>
         </div>
