--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -1079,6 +1079,22 @@
 	});
 	//End Rank
 
+	// Animalistic Intelligence
+	const updateAnimalIntelligenceDisplay = function() {
+		getAttrs(["animalsmarts"], function(attributesValues) {
+			console.log("Updating animal smarts " + attributesValues.animalsmarts);
+			if (attributesValues.animalsmarts === "on") {
+				setAttrs({ animalsmarts_display: "(A)" });
+			} else {
+				setAttrs({ animalsmarts_display: "" });
+			}
+		});
+	}
+	on("change:animalsmarts", function() {
+		updateAnimalIntelligenceDisplay();
+	});
+	
+	
 	//Display Derived Stats HR
 	on("change:useacademics change:tdsanity change:potsmfame change:ripreason change:ripstatus change:hfglory change:izfirewall change:dlgrit change:neuraltoughness change:corruption change:izstreetcred change:izstrain", function() {
 	    getAttrs(["useacademics","tdsanity","potsmFame","ripReason","ripStatus","hfGlory","izFirewall","DLGrit","neuraltoughness","Corruption","izStreetCred","izStrain"], function(v) {
@@ -3060,7 +3076,7 @@
 <input type="hidden" name="attr_initstatblock" value="0" />
 <input type="hidden" name="attr_initdesc" value="0" />
 <input type="hidden" name="attr_chardesc" value="{{name=@{character_name}}}" />
-<input type="hidden" name="attr_charatts" value="[^{agility} @{agility_display}](~tAgilityRoll), [^{smarts} @{smarts_display}](~tSmartRoll), [^{spirit} @{spirit_display}](~tSpirRoll), [^{strength} @{strength_display}](~tStrengthRoll), [^{vigor} @{vigor_display}](~tVigorRoll)" />
+<input type="hidden" name="attr_charatts" value="[^{agility} @{agility_display}](~tAgilityRoll), [^{smarts} @{smarts_display}@{animalsmarts_display}](~tSmartsRoll), [^{spirit} @{spirit_display}](~tSpiritRoll), [^{strength} @{strength_display}](~tStrengthRoll), [^{vigor} @{vigor_display}](~tVigorRoll)" />
 <input type="hidden" name="attr_initskills" value="0" />
 <input type="hidden" name="attr_charskills" />
 <input type="hidden" name="attr_initderived" value="0" />
@@ -3279,7 +3295,7 @@
         						<input type='hidden' name='attr_rolltAgility' value='{{name=@{character_name} }} {{trait=^{agility}}} {{skill_rank=@{agility_display} }} {{skill_roll=[[@{agility_rank} + @{agrollMod}+ @{ModSumEnc}[Wounds, Fatigue, Encumbrance, Distracted] + @{traitmods} ]] }} {{mook=[[1d0+@{wdNum}]]}} {{wild_die=[[ 1d@{wilddie}! + @{agilitymod} + @{agrollMod} + @{ModSumEnc}[Wounds, Fatigue, Encumbrance] + @{traitmods} ]]}}' />
                             </div>
                             <div class='sheet-basetrait'>
-                                <button class="sheet-traitbutton sheet-traitflexattbutton" type='roll' name='roll_tSmartsRoll' title="@{tSmartsRoll}" value='@{smartsbutton}' data-i18n="smarts"> Smarts</button>
+                                <button class="sheet-traitbutton sheet-traitflexattbutton" type="roll" name="roll_tSmartsRoll" title="@{tSmartsRoll}" value="@{smartsbutton}"><span data-i18n="smarts">Smarts</span> <span name="attr_animalsmarts_display"></span></button>
                                 <input type="hidden" name="attr_smartsbutton" value="@{whispersmarts} &{template:roll} @{rolltSmarts} @{setmods} @{showtraitmods}" />
                                 <span><select name="attr_smarts" title="@{smarts}" class="sheet-traitdie" value="4">
                                     <option value="4">d4</option>
@@ -3294,9 +3310,11 @@
         						    <input type='text' class='sheet-ModDesc' name='attr_smModType' placeholder='Modifier due to edges, hindrances, etc' data-i18n-placeholder="att-mod-description" />
         						    +<input class="sheet-otraitmod" type="number" name="attr_smrollMod" title="@{smrollMod}" value="0" /><br />
                                     <input type='checkbox' value='/w gm' name='attr_whispersmarts' /> <span class='sheet-ModDesc' data-i18n="whisper-roll-to-gm">Whisper roll to GM</span>
+									<input type="checkbox" name="attr_animalsmarts" /> <span class="sheet-ModDesc" data-i18n="animal-intelligence">Animal intelligence</span>
         						</div>
         						<input type='hidden' name='attr_smarts_rank' value='1d4!' />
         						<input type='hidden' name='attr_smarts_display' value='1d4' />
+								<input type="hidden" name="attr_animalsmarts_display" value="" />
         						<input type='hidden' name='attr_rolltSmarts' value='{{name=@{character_name} }} {{trait=^{smarts}}} {{skill_rank=@{smarts_display} }} {{skill_roll=[[@{smarts_rank} + @{smrollMod}+ @{ModSum}[Wounds, Fatigue, Distracted] + @{traitmods} ]] }} {{mook=[[1d0+@{wdNum}]]}} {{wild_die=[[ 1d@{wilddie}! + @{smartsmod} + @{smrollMod} + @{ModSum}[Wounds, Fatigue, Distracted] + @{traitmods}]]}}' />
                             </div>
                             <div class='sheet-basetrait'>
@@ -3366,7 +3384,7 @@
                         <div class="sheet-base sheet-AttsSum">
                             <button class="sheet-traitbutton" type='roll' name='roll_AgilitySumRoll' value='@{agilitybutton}'><span data-i18n="agility-abbr">Agl</span>: <span name='attr_agility_display'></span></button>,
 
-                            <button class="sheet-traitbutton" type='roll' name='roll_SmartsSumRoll' value='@{smartsbutton}'><span data-i18n="smarts-abbr">Sma</span>: <span name='attr_smarts_display'></span></button>,
+                            <button class="sheet-traitbutton" type='roll' name='roll_SmartsSumRoll' value='@{smartsbutton}'><span data-i18n="smarts-abbr">Sma</span>: <span name='attr_smarts_display'></span><span name="attr_animalsmarts_display"></span></button>,
 
                             <button class="sheet-traitbutton" type='roll' name='roll_SpiritSumRoll' value='@{spiritbutton}'><span data-i18n="spirit-abbr">Spi</span>: <span name='attr_spirit_display'></span></button>,
 
@@ -7116,6 +7134,43 @@
 			<!--                     -->
 			<div class="sheet-release">
 			    <h3 class='subsectionHeader' data-i18n="release-notes">Release Notes</h3>
+
+                <label class="sheet-rowlabel">
+			        <input type="checkbox" class="sheet-releasenotes" name="attr_releasenotes36" value="1" /><span class="sheet-releasenotes" style='color: red;'><h4 class="sheet-rnversion"><span data-i18n="version">Version</span> 3.6</h4></span>
+			    </label>
+			    <input type="checkbox" class="sheet-releasenotes" style="display: none;" name="attr_releasenotes36" value="1" />
+        		<div class="sheet-releasenotes">
+        		   <p data-i18n="changes-this-release">
+        		       Changes this release:
+        		   </p>
+				   <ul>
+						<li><strong data-i18n="bug-fixes">Bug Fixes</strong></li>
+						<ul>
+							<li data-i18n="missing-translations-default-sheet-settings-rename-piloting-climbing">Default sheet settings : missing translations entries for "rename piloting" and "rename climbing" settings options.</li>
+							<li data-i18n="renaming-skills-default-sheet-settings-not-working">Default sheet settings : Renaming skills on the Game Setting page would not transfer in game on character sheets.</li>
+							<li data-i18n="statblocks-rolling-smarts-spirit-would-fail">StatBlocks : rolling for Smarts or Spirit from StatBlocks would fail.</li>
+						</ul>
+
+                        <li><strong data-i18n="sheet-enhancements">Functionality Enhancements</strong></li>
+                        <ul>
+							<li data-i18n="added-animal-smarts">Ability to flag Smarts as "Animal Intelligence", which then appears as (A) in character sheet and statblocks.</li>
+						</ul>
+
+                        <li><strong data-i18n="known-issues">Known Issues</strong></li>
+                        <ul>
+                            <li data-i18n="statblock-doesnt-support">Statblock Output Button doesn't currently output:</li>
+                            <ul>
+                                <li data-i18n="spell-information">Spell information</li>
+                                <li data-i18n="talismans">Talismans</li>
+                                <li data-i18n="cybernetics-slash-augmentations">Cybernetics/Augmentations</li>
+                                <li data-i18n="rippertech">Rippertech</li>
+                            </ul>
+                            <li data-i18n="talismans-are-missing-from-sheet">Talismans are missing from the sheet completely</li>
+                        </ul>
+					</ul>
+				</div>
+
+
                 <label class="sheet-rowlabel">
 			        <input type='checkbox' class='sheet-releasenotes' name='attr_releasenotes35' value='1' /><span class='sheet-releasenotes' style='color: red;'><h4 class="sheet-rnversion"><span data-i18n="version">Version</span> 3.5</h4></span>
 			    </label>
@@ -7137,18 +7192,6 @@
                             <li data-i18n="soak-button-added">Added a Soak button (based on vigor, allow to set mods dedicated to Soak rolls)</li>
 							<li data-i18n="rename-skills-from-game-settings">Allow to rename skills directly from game settings page</li>
 						</ul>
-
-                        <li><strong data-i18n="known-issues">Known Issues</strong></li>
-                        <ul>
-                            <li data-i18n="statblock-doesnt-support">Statblock Output Button doesn't currently output:</li>
-                            <ul>
-                                <li data-i18n="spell-information">Spell information</li>
-                                <li data-i18n="talismans">Talismans</li>
-                                <li data-i18n="cybernetics-slash-augmentations">Cybernetics/Augmentations</li>
-                                <li data-i18n="rippertech">Rippertech</li>
-                            </ul>
-                            <li data-i18n="talismans-are-missing-from-sheet">Talismans are missing from the sheet completely</li>
-                        </ul>
 				   </ul>
 				</div>
 				
