Forbidden Lands v1.4 update
- added a descriptive note to Consumable rolls as a reminder that you must manually adjust the consumable die on the sheet if you roll a Bane.
- small adjustments to roll template header and footer

--- a/Forbidden_Lands/Forbidden_Lands.htm
+++ b/Forbidden_Lands/Forbidden_Lands.htm
@@ -1,5 +1,5 @@
-<!--6/29/19'-->
-<input type="hidden" name="attr_version" value="1.3">
+<!--7/7/19'-->
+<input type="hidden" name="attr_version" value="1.4">
 
 <!--tabs-->
 <input class="tab character" name="attr_tab" i18n-title="character" title="Character" type="radio" value="1" checked/>
@@ -565,7 +565,7 @@
                     </select>
                 </div>
                 <div class="consumables-box6">
-                    <button type="roll" name="roll_food" title="%{food}" value="&{template:forbiddenlands} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=Consumable}} @{food}"></button>
+                    <button type="roll" name="roll_food" title="%{food}" value="&{template:forbiddenlands} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=Consumable}} {{footer=^{consumable-note}}} @{food}"></button>
                 </div>
                 <div class="consumables-box7">
                     <span class="header-h1" data-i18n="water">Water</span>
@@ -580,7 +580,7 @@
                     </select>
                 </div>
                 <div class="consumables-box9">
-                    <button type="roll" name="roll_water" title="%{water}" value="&{template:forbiddenlands} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=Consumable}} @{water}"></button>
+                    <button type="roll" name="roll_water" title="%{water}" value="&{template:forbiddenlands} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=Consumable}} {{footer=^{consumable-note}}} @{water}"></button>
                 </div>
                 <div class="consumables-box10">
                     <span class="header-h1" data-i18n="arrows">Arrows</span>
@@ -595,7 +595,7 @@
                     </select>
                 </div>
                 <div class="consumables-box12">
-                    <button type="roll" name="roll_arrows" title="%{arrows}" value="&{template:forbiddenlands} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=Consumable}} @{arrows}"></button>
+                    <button type="roll" name="roll_arrows" title="%{arrows}" value="&{template:forbiddenlands} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=Consumable}} {{footer=^{consumable-note}}} @{arrows}"></button>
                 </div>
                 <div class="consumables-box13">
                     <span class="header-h1" data-i18n="torches">Torches</span>
@@ -610,7 +610,7 @@
                     </select>
                 </div>
                 <div class="consumables-box15">
-                    <button type="roll" name="roll_torches" title="%{torches}" value="&{template:forbiddenlands} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=Consumable}} @{torches}"></button>
+                    <button type="roll" name="roll_torches" title="%{torches}" value="&{template:forbiddenlands} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=Consumable}} {{footer=^{consumable-note}}} @{torches}"></button>
                 </div>
             </div>    
         </div>
@@ -1499,7 +1499,7 @@
             {{/spell-description}}
             
             {{#free-text}}<div class="template-grid-item template-span-six free-text"><span>{{free-text}}</span></div>{{/free-text}}
-            <div class="template-grid-item template-span-six template-footer">{{#footer}}{{footer}}{{/footer}}</div>
+            {{#footer}}<div class="template-grid-item template-span-six template-footer">{{footer}}</div>{{/footer}}
 
             {{#allprops() character_name name character_id name_link subtitle free-text footer attribute-die-one attribute-die-two attribute-die-three attribute-die-four attribute-die-five attribute-die-six skill-die-one skill-die-two skill-die-three skill-die-four skill-die-five skill-die-six skill-die-seven negative-die-one negative-die-two negative-die-three gear-die-one gear-die-two gear-die-three gear-die-four gear-die-five gear-die-six gear-die-seven gear-die-eight gear-die-nine gear-die-ten gear-die-eleven gear-die-twelve artifact-die-eight artifact-die-ocho artifact-die-ten artifact-die-twelve attribute-roll-one attribute-roll-two attribute-roll-three attribute-roll-four attribute-roll-five attribute-roll-six skill-roll-one skill-roll-two skill-roll-three skill-roll-four skill-roll-five skill-roll-six skill-roll-seven negative-roll-one negative-roll-two negative-roll-three gear-roll-one gear-roll-two gear-roll-three gear-roll-four gear-roll-five gear-roll-six gear-roll-seven gear-roll-eight gear-roll-nine gear-roll-ten gear-roll-eleven gear-roll-twelve artifact-roll-eight artifact-roll-ocho artifact-roll-ten artifact-roll-twelve consumable-die-six consumable-die-eight consumable-die-ten consumable-die-twelve consumable-roll-six consumable-roll-eight consumable-roll-ten consumable-roll-twelve push-query weapon-bonus weapon-damage weapon-range weapon-features spell-rank spell-willpower spell-range spell-duration spell-ingredients spell-description}}
                 <div class="template-grid-item template-span-half"><span>**{{key}}**:</span></div>
