Add version upgrade functionality, bump version

--- a/Band of Blades/bob.html
+++ b/Band of Blades/bob.html
@@ -386,7 +386,7 @@
                     <div class="sheet-actions sheet-col100"><div class="sheet-action sheet-col100"><div><input type="checkbox" class="sheet-checkbox sheet-circlebox" value="1" name="attr_special1"/><span></span></div><div><input type="checkbox" class="sheet-checkbox sheet-circlebox" value="1" name="attr_special2"/><span></span></div><div><input type="checkbox" class="sheet-checkbox sheet-circlebox" value="1" name="attr_special3"/><span></span></div><button type="roll" name="roll_special" class="sheet-rollbutton sheet-actionbutton" value='&{template:bitd}{{action=1}}{{subtitle=Rolls}}{{charname=@{character_name}}}{{rolltypeimage=http://s3-us-west-2.amazonaws.com/bob-roll20-sheet-images/special.png}}{{rolltypetext=Special}}{{position=?{Position|Risky|Controlled|Desperate}}}{{effect=?{Effect|Standard|Limited|Great|Extreme}}}{{bonusdice=[[?{Bonus dice|0|1|2|3|4|5|6|-1|-2|-3}]]}}{{roll1=[[[[{@{special1},@{special1}+?{Bonus dice}}kl1]]d6]]}}{{roll2=[[[[{@{special2},@{special2}+?{Bonus dice}+1}kl1]]d6]]}}{{roll3=[[[[{@{special3},@{special3}+?{Bonus dice}+2}kl1]]d6]]}}{{bonus1=[[[[{?{Bonus dice},1}kl1]]d6]]}}{{bonus2=[[[[{?{Bonus dice}-1,1}kl1]]d6]]}}{{bonus3=[[[[{?{Bonus dice}-2,1}kl1]]d6]]}}{{bonus4=[[[[{?{Bonus dice}-3,1}kl1]]d6]]}}{{bonus5=[[[[{?{Bonus dice}-4,1}kl1]]d6]]}}{{bonus6=[[[[{?{Bonus dice}-5,1}kl1]]d6]]}}{{zerodice=[[[[{-@{special1}-@{special2}-@{special3}-(?{Bonus dice})+1,1}kl1]]d6]], [[[[{-@{special1}-@{special2}-@{special3}-(?{Bonus dice})+1,1}kl1]]d6]]}}'><div class="tooltip"><div class="sheet-label sheet-specialskilllabel"><input type="text" placeholder="Special" class="sheet-specialactionbutton" name="attr_special_skill"/></div><span class="tooltiptext">Your Specialist skill</span></div></button></div>                    <!-- RESEARCH -->
                     <div class="sheet-action sheet-col100"><div><input type="checkbox" class="sheet-checkbox sheet-circlebox" value="1" name="attr_research1"/><span></span></div><div><input type="checkbox" class="sheet-checkbox sheet-circlebox" value="1" name="attr_research2"/><span></span></div><div><input type="checkbox" class="sheet-checkbox sheet-circlebox" value="1" name="attr_research3"/><span></span></div><button type="roll" name="roll_research" class="sheet-rollbutton sheet-actionbutton" value='&{template:bitd}{{action=1}}{{subtitle=Rolls}}{{charname=@{character_name}}}{{rolltypeimage=https://s3-us-west-2.amazonaws.com/bob-roll20-sheet-images/research.png}}{{rolltypetext=research}}{{position=?{Position|Risky|Controlled|Desperate}}}{{effect=?{Effect|Standard|Limited|Great|Extreme}}}{{bonusdice=[[?{Bonus dice|0|1|2|3|4|5|6|-1|-2|-3}]]}}{{roll1=[[[[{@{research1},@{research1}+?{Bonus dice}}kl1]]d6]]}}{{roll2=[[[[{@{research2},@{research2}+?{Bonus dice}+1}kl1]]d6]]}}{{roll3=[[[[{@{research3},@{research3}+?{Bonus dice}+2}kl1]]d6]]}}{{bonus1=[[[[{?{Bonus dice},1}kl1]]d6]]}}{{bonus2=[[[[{?{Bonus dice}-1,1}kl1]]d6]]}}{{bonus3=[[[[{?{Bonus dice}-2,1}kl1]]d6]]}}{{bonus4=[[[[{?{Bonus dice}-3,1}kl1]]d6]]}}{{bonus5=[[[[{?{Bonus dice}-4,1}kl1]]d6]]}}{{bonus6=[[[[{?{Bonus dice}-5,1}kl1]]d6]]}}{{zerodice=[[[[{-@{research1}-@{research2}-@{research3}-(?{Bonus dice})+1,1}kl1]]d6]], [[[[{-@{research1}-@{research2}-@{research3}-(?{Bonus dice})+1,1}kl1]]d6]]}}'><div class="tooltip">Research<span class="tooltiptext">Research a person, document, or item with close scrutiny to gather information and apply knowledge; gain a deeper understanding.</span></div></button></div>
                     <!-- RIG -->
-                    <div class="sheet-action sheet-col100"><div><input type="checkbox" class="sheet-checkbox sheet-circlebox" value="1" name="attr_RIG1"/><span></span></div><div><input type="checkbox" class="sheet-checkbox sheet-circlebox" value="1" name="attr_RIG2"/><span></span></div><div><input type="checkbox" class="sheet-checkbox sheet-circlebox" value="1" name="attr_RIG3"/><span></span></div><button type="roll" name="roll_rig" class="sheet-rollbutton sheet-actionbutton" value='&{template:bitd}{{action=1}}{{subtitle=Rolls}}{{charname=@{character_name}}}{{rolltypeimage=https://s3-us-west-2.amazonaws.com/bob-roll20-sheet-images/tinker.png}}{{rolltypetext=rig}}{{position=?{Position|Risky|Controlled|Desperate}}}{{effect=?{Effect|Standard|Limited|Great|Extreme}}}{{bonusdice=[[?{Bonus dice|0|1|2|3|4|5|6|-1|-2|-3}]]}}{{roll1=[[[[{@{rig1},@{rig1}+?{Bonus dice}}kl1]]d6]]}}{{roll2=[[[[{@{rig2},@{rig2}+?{Bonus dice}+1}kl1]]d6]]}}{{roll3=[[[[{@{rig3},@{rig3}+?{Bonus dice}+2}kl1]]d6]]}}{{bonus1=[[[[{?{Bonus dice},1}kl1]]d6]]}}{{bonus2=[[[[{?{Bonus dice}-1,1}kl1]]d6]]}}{{bonus3=[[[[{?{Bonus dice}-2,1}kl1]]d6]]}}{{bonus4=[[[[{?{Bonus dice}-3,1}kl1]]d6]]}}{{bonus5=[[[[{?{Bonus dice}-4,1}kl1]]d6]]}}{{bonus6=[[[[{?{Bonus dice}-5,1}kl1]]d6]]}}{{zerodice=[[[[{-@{rig1}-@{rig2}-@{rig3}-(?{Bonus dice})+1,1}kl1]]d6]], [[[[{-@{rig1}-@{rig2}-@{rig3}-(?{Bonus dice})+1,1}kl1]]d6]]}}'><div class="tooltip">Rig<span class="tooltiptext">Rig together mechanical solutions; disable, repair, or create mechanisms; disable a trap, pick a lock; build fortifications; repair siege weapons.</span></div></button></div>
+                    <div class="sheet-action sheet-col100"><div><input type="checkbox" class="sheet-checkbox sheet-circlebox" value="1" name="attr_rig1"/><span></span></div><div><input type="checkbox" class="sheet-checkbox sheet-circlebox" value="1" name="attr_rig2"/><span></span></div><div><input type="checkbox" class="sheet-checkbox sheet-circlebox" value="1" name="attr_rig3"/><span></span></div><button type="roll" name="roll_rig" class="sheet-rollbutton sheet-actionbutton" value='&{template:bitd}{{action=1}}{{subtitle=Rolls}}{{charname=@{character_name}}}{{rolltypeimage=https://s3-us-west-2.amazonaws.com/bob-roll20-sheet-images/tinker.png}}{{rolltypetext=rig}}{{position=?{Position|Risky|Controlled|Desperate}}}{{effect=?{Effect|Standard|Limited|Great|Extreme}}}{{bonusdice=[[?{Bonus dice|0|1|2|3|4|5|6|-1|-2|-3}]]}}{{roll1=[[[[{@{rig1},@{rig1}+?{Bonus dice}}kl1]]d6]]}}{{roll2=[[[[{@{rig2},@{rig2}+?{Bonus dice}+1}kl1]]d6]]}}{{roll3=[[[[{@{rig3},@{rig3}+?{Bonus dice}+2}kl1]]d6]]}}{{bonus1=[[[[{?{Bonus dice},1}kl1]]d6]]}}{{bonus2=[[[[{?{Bonus dice}-1,1}kl1]]d6]]}}{{bonus3=[[[[{?{Bonus dice}-2,1}kl1]]d6]]}}{{bonus4=[[[[{?{Bonus dice}-3,1}kl1]]d6]]}}{{bonus5=[[[[{?{Bonus dice}-4,1}kl1]]d6]]}}{{bonus6=[[[[{?{Bonus dice}-5,1}kl1]]d6]]}}{{zerodice=[[[[{-@{rig1}-@{rig2}-@{rig3}-(?{Bonus dice})+1,1}kl1]]d6]], [[[[{-@{rig1}-@{rig2}-@{rig3}-(?{Bonus dice})+1,1}kl1]]d6]]}}'><div class="tooltip">Rig<span class="tooltiptext">Rig together mechanical solutions; disable, repair, or create mechanisms; disable a trap, pick a lock; build fortifications; repair siege weapons.</span></div></button></div>
                     <!-- SCOUT -->
                     <div class="sheet-action sheet-col100"><div><input type="checkbox" class="sheet-checkbox sheet-circlebox" value="1" name="attr_scout1"/><span></span></div><div><input type="checkbox" class="sheet-checkbox sheet-circlebox" value="1" name="attr_scout2"/><span></span></div><div><input type="checkbox" class="sheet-checkbox sheet-circlebox" value="1" name="attr_scout3"/><span></span></div><button type="roll" name="roll_scout" class="sheet-rollbutton sheet-actionbutton" value='&{template:bitd}{{action=1}}{{subtitle=Rolls}}{{charname=@{character_name}}}{{rolltypeimage=https://s3-us-west-2.amazonaws.com/bob-roll20-sheet-images/scout.png}}{{rolltypetext=scout}}{{position=?{Position|Risky|Controlled|Desperate}}}{{effect=?{Effect|Standard|Limited|Great|Extreme}}}{{bonusdice=[[?{Bonus dice|0|1|2|3|4|5|6|-1|-2|-3}]]}}{{roll1=[[[[{@{scout1},@{scout1}+?{Bonus dice}}kl1]]d6]]}}{{roll2=[[[[{@{scout2},@{scout2}+?{Bonus dice}+1}kl1]]d6]]}}{{roll3=[[[[{@{scout3},@{scout3}+?{Bonus dice}+2}kl1]]d6]]}}{{bonus1=[[[[{?{Bonus dice},1}kl1]]d6]]}}{{bonus2=[[[[{?{Bonus dice}-1,1}kl1]]d6]]}}{{bonus3=[[[[{?{Bonus dice}-2,1}kl1]]d6]]}}{{bonus4=[[[[{?{Bonus dice}-3,1}kl1]]d6]]}}{{bonus5=[[[[{?{Bonus dice}-4,1}kl1]]d6]]}}{{bonus6=[[[[{?{Bonus dice}-5,1}kl1]]d6]]}}{{zerodice=[[[[{-@{scout1}-@{scout2}-@{scout3}-(?{Bonus dice})+1,1}kl1]]d6]], [[[[{-@{scout1}-@{scout2}-@{scout3}-(?{Bonus dice})+1,1}kl1]]d6]]}}'><div class="tooltip">Scout<span class="tooltiptext">Scout a location or situation to gather information; sense trouble before it happens; move unseen; detect weaknesses or exploits if there are any</span></div></button></div></div></div>
                     <!-- PROWESS -->
@@ -528,6 +528,8 @@
 <!-- AUTO FILL DATA -->
 <script type="text/worker">
     "use strict";
+    const sheetVersion = "0.2";
+    const sheetName = "Band of Blades";
     const playbookData = {
         heavy: {
           abilities: [{
@@ -1133,16 +1135,31 @@
     on("sheet:opened", () => {
       const initialRows = ["ability"];
       getAttrs(["version"], (v) => {
-        if (!v.version) {
+        const upgradeSheet = version => {
+          const [major, minor, patch] = version && version.split(".").map(x => parseInt(x, 10));
+          console.log(`Found version ${version}`);
+          if (major === 0 && minor < 2) updateToV0_2();
+        };
+        const initialiseSheet = () => {
           const setting = initialRows.reduce((memo, sectionName) => {
             memo[`repeating_${sectionName}_${generateRowID()}_dummy`] = 1;
             return memo;
           }, {});
           setAttrs(setting);
-        }
+        };
+        const updateToV0_2 = () => {
+          console.log('Updating to version 0.2');
+          getAttrs(["tinker1", "tinker2", "tinker3"], (v) => {
+            if (v.tinker1) setAttrs({ rig1: v.tinker1 });
+            if (v.tinker2) setAttrs({ rig2: v.tinker2 });
+            if (v.tinker3) setAttrs({ rig3: v.tinker3 });
+          });
+        };
+        if (v.version) upgradeSheet(v.version);
+        else initialiseSheet();
         setAttrs({
-          version: "0.1",
-          character_sheet: "Band of Blades 0.1"
+          version: sheetVersion,
+          character_sheet: `${sheetName} v${sheetVersion}`
         });
       });
     });
