Delta green bug fix
Adding a fix for one of the bugs posted on the Roll20 Char Sheet git hub

--- a/Delta Green/delta_green.html
+++ b/Delta Green/delta_green.html
@@ -316,7 +316,7 @@ setAttrs({bp: Math.max(Math.floor(v.bp)+Math.floor(v.bp_diff),0)});
 setAttrs({bp_diff: 0});
 });
 });
-on('sheet:opened change:str change:con change:pow change:dex change:int', function() {
+on('sheet:opened change:str change:con change:pow change:dex change:int change:cha', function() {
 getAttrs(["str","con","pow","dex","int","cha","pow_tmp"], function(values) {
 setAttrs({strx5: Math.floor(values.str * 5)});
 setAttrs({conx5: Math.floor(values.con * 5)});
