--- a/Call_of_Cthulhu_7th_Ed_French/coc_7th_ed.html
+++ b/Call_of_Cthulhu_7th_Ed_French/coc_7th_ed.html
@@ -48,7 +48,7 @@
 <!------------------------- Logo Cthulhu ------------------------->
             
 <div class="sheet-logosection">
-            <div style="text-align:right"><img src="https://github.com/Roll20/roll20-character-sheets/tree/master/Call_of_Cthulhu_7th_Ed_French/titre.png" alt="Call of Cthulhu"></div>
+            <div style="text-align:right"><img src="https://i.imgur.com/1B7wsCE.png" alt="Call of Cthulhu"></div>
             </div><br>
 </div>
 
@@ -463,7 +463,7 @@
 
 <!------------------------- Logo v7 ------------------------->
 
-        <div class="sheet-logosection" style="text-align:center"><img src="https://github.com/Roll20/roll20-character-sheets/tree/master/Call_of_Cthulhu_7th_Ed_French/logo.png" alt="Cthulhu">
+        <div class="sheet-logosection" style="text-align:center"><img src="https://i.imgur.com/wfNRVj9.png" alt="Cthulhu">
         </div>
 
 </div>
@@ -5031,7 +5031,7 @@
 <!------------------------- Edge + Chaosium  ------------------------->    
     <div style="text-align:right">
             <img src="https://app.roll20.net/v2/images/roll20-logo.png" alt="Roll20" width="150">
-            <img src="https://github.com/Roll20/roll20-character-sheets/tree/master/Call_of_Cthulhu_7th_Ed_French/license.png" alt="Edge_Chaosium" width="150">
+            <img src="https://i.imgur.com/QFV7cJo.png" alt="Edge_Chaosium" width="150">
     </div>
 </div>
 
