uc-58: QA-fixes, class+background

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -16408,6 +16408,7 @@
     });
 </script>
 
+
 <!-- CHARACTERMANCER REPEATING SECTIONS -->
 <charmancer class="sheet-repeating-topbar">
     <div class="topbar-container">
@@ -17279,7 +17280,7 @@
                 </div>
                 <div class="choice row background_possible background_equipment_row">
                     <p>
-                        <span class="label" data-i18n="equipment">Equipment</span>:
+                        <span class="label" data-i18n="equipment">Equipment:</span>
                         <span class="background_standard_equipment"></span>
                         <!-- TODO: Create choice for the three backgrounds that need it, based on Item Subtype (e.g. Artisan's Tools) -->
                     </p>
