Starfinder (simple) bug fix 071219
Fixed a bug causing drone ranged and operative attacks to fail

--- a/Starfinder (simple)/Starfinder (simple).html
+++ b/Starfinder (simple)/Starfinder (simple).html
@@ -2641,8 +2641,8 @@
 					    		    <select title="@{repeating_pc-weapon_$X_drone-attack-type}" name="attr_drone-attack-type">
 						    	    	<option value="0" selected >None</option>
 							    	    <option value="@{drone-attk-melee}" >Melee</option>
-								        <option value="@{drone-attk-ranged}" >Operative</option>
-								        <option value="@{drone-attk-ranged}" >Ranged</option>
+								        <option value="@{drone-attk-range}" >Operative</option>
+								        <option value="@{drone-attk-range}" >Ranged</option>
     								    <option value="@{drone-attk-thrown}" >Thrown</option>
 	    						    </select>
 		    					    <br>Attack Type
