--- a/A Song of Ice and Fire/SIFRPNew.html
+++ b/A Song of Ice and Fire/SIFRPNew.html
@@ -1471,7 +1471,7 @@
                         </div>
                         <div class="sheet-row">
                             <div class="sheet-item" style="width: 50%; margin-left: 25%;"><button name="roll_intrigueInit" type="roll"
-                                value="&{template:sofai} {{input=**@{character_name} tests a [[ ( [[ @{selected|status} - @{selected|wounds} + @{selected|statusReputation}]] )d6kh@{selected|status}sd - @{selected|injuries} &{tracker}]] for Initiative (Intrigue)!">
+                                value="&{template:sofai} {{input=**@{character_name} tests Initiative (Intrigue)!** \n\n [[ ( [[ @{status} + @{statusReputation} ]] )d6dl[[ @{wounds} + @{statusReputation} ]] - @{injuries} &{tracker} ]] }}">
                                 <label style="font-size: 1em;">Initiative</label> </button></div>
                         </div>
                         <br/>
@@ -1544,7 +1544,7 @@
                         </div>
                         <div class="sheet-row">
                             <div class="sheet-item" style="width: 50%; margin-left: 25%"><button name="roll_combatInit" type="roll" class="initRoll"
-                                value="&{template:sofai} {{input=**@{character_name} tests a [[ ( [[ @{selected|agility} - @{selected|wounds} + @{selected|agilityQuickness}]] )d6kh@{selected|agility}sd - @{selected|injuries} &{tracker}]] for Initiative (Combat)!">
+                                value="&{template:sofai} {{input=**@{character_name} tests Initiative (Combat)!** \n\n [[ ( [[ @{agility} + @{agilityQuickness}]] )d6dl[[ @{wounds} + @{agilityQuickness} ]] - @{selected|injuries} &{tracker} ]] }}">
                                 <label style="font-size: 1em;">Initiative</label></button></div>
                         </div>
                         <br/>
