[SFRPG] Fix initiative fix
Removed requirement for token to be selected.

--- a/A Song of Ice and Fire/SIFRPNew.html
+++ b/A Song of Ice and Fire/SIFRPNew.html
@@ -1544,7 +1544,7 @@
                         </div>
                         <div class="sheet-row">
                             <div class="sheet-item" style="width: 50%; margin-left: 25%"><button name="roll_combatInit" type="roll" class="initRoll"
-                                value="&{template:sofai} {{input=**@{character_name} tests Initiative (Combat)!** \n\n [[ ( [[ @{agility} + @{agilityQuickness}]] )d6dl[[ @{wounds} + @{agilityQuickness} ]] - @{selected|injuries} &{tracker} ]] }}">
+                                value="&{template:sofai} {{input=**@{character_name} tests Initiative (Combat)!** \n\n [[ ( [[ @{agility} + @{agilityQuickness}]] )d6dl[[ @{wounds} + @{agilityQuickness} ]] - @{injuries} &{tracker} ]] }}">
                                 <label style="font-size: 1em;">Initiative</label></button></div>
                         </div>
                         <br/>
