--- a/A Song of Ice and Fire/SIFRPNew.html
+++ b/A Song of Ice and Fire/SIFRPNew.html
@@ -1881,7 +1881,7 @@
                         </div>
                         <div class="sheet-row">
                             <div class="sheet-item" style="width: 15%;"><button name="roll_hit" type="roll"
-                                    value="&{template:sofai} {{input=** @{character_name} attacks @{target|token_name} with @{weapon}!** \n\n Attack: ( [[ @{weaponType} - @{wounds} + @{weaponSpecialty} - @{weaponTraining}]] )d6kh@{weaponType}sd - @{injuries} - @{fatigue} + ?{Modifier|0} ]] \n Target:  [[@{target|combatDefense}]]}}">
+                                    value="&{template:sofai} {{input=**@{character_name} attacks with @{weapon}!** \n\n Attack: [[ ( [[ @{weaponType} + @{weaponSpecialty} + @{weaponTraining} ]] )d6dl[[ @{wounds} + @{weaponSpecialty} + @{weaponTraining} ]] - @{injuries} - @{fatigue} + ?{Modifier|0} ]] }}">
                                     <span>Hit</span> </button></div>
                             <div class="sheet-item" style="width: 20%;"><button name="roll_Rangeddamage" type="roll"
                                     value="&{template:sofai} {{input=**@{character_name} does [[@{weaponDamageTest} + @{weaponDamageMod} + ?{Modifier|0}]] damage!**}}">
